# NextJam

./: CMakeLists.txt  README.md
code/: colors.h  level.h  main.cpp  settings.h  visual_node.h  vmath.h
res/: grid_block.xml  test.xml  ui.xml
